attack/blocks first good attempt